Start porting logical meter filters
- Add missing test cases
- Resolve ID parameter ambiguity
- Remove never-used measurement threshold filters
- A bit of intellij auto-cleanup